--- a/views/admin/productManagement.ejs
+++ b/views/admin/productManagement.ejs
@@ -60,8 +60,8 @@
               <td class="px-6 py-4">
                 <img src="/uploads/<%= product.images[0]  %>" alt="image is not supporting"
                   class="max-w-16 object-contain">
-              </td>
-              <th scope="row" class="px-6 py-4 font-medium text-gray-600  uppercase">
+              </td >
+              <th scope="row" class=" font-medium text-gray-600  uppercase px-6 py-4 max-w-xs truncate">
                 <%= product.name %>
               </th>
               <td class="px-6 py-4 max-w-xs truncate">
@@ -71,8 +71,7 @@
                 <%= product.isBlocked ? "Blocked" : "Active" %>
               </td>
               <td class="px-6 py-4">
-                <%= new Date(product.createdAt).toLocaleDateString("en-GB", { day: "2-digit" , month: "short" ,
-                  year: "numeric" }) %>
+                <%= product.createdAt.toLocaleDateString("en-IN",{year:'numeric',month:'short',day:'numeric'}) %>
               </td>
               <td class="px-6 py-4">
                 <div>
