--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -12,7 +12,7 @@
           <img src="/img/<%= category.name %>.png" alt="<%= category.name %>"
             class="w-32 h-32 object-cover shadow-md rounded-full mx-auto">
           <p class="mt-2 font-medium">
-            <%= category.name %>
+            <%= category.name %> (<%= category.productCount %>)
           </p>
         </a>
       </div>
