--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -28,7 +28,7 @@
           <input type="password" placeholder="New Password" name="password" id="password" class="input-field"
             required />
           <small id="errorPass" style="color:red; display:none;"></small>
-          <!-- Fix: point to #password -->
+          <!-- Fix: point to password -->
           <i class="fa-solid fa-eye toggle-password" onclick="togglePassword('password', this)"></i>
         </div>
 
