fixed layouts in auth page

--- a/views/layouts/userLayout.ejs
+++ b/views/layouts/userLayout.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        <%= typeof title !=='undefined' ? title : "Admin Panel" %>
+        <%= typeof title !=='undefined' ? title : "User" %>
     </title>
 
     <link href="/styles/output.css" rel="stylesheet">
