--- a/views/admin/userManagement.ejs
+++ b/views/admin/userManagement.ejs
@@ -31,14 +31,13 @@
         <% } %>
     </form>
 
-     <a href="/admin/users"
-      class="link ml-2 px-2 py-2 text-gray-700  rounded-lg hover:bg-gray-100">All Users</a>
-    <a href="/admin/users?blocked=true"
-      class="link ml-2 px-2 py-2 text-gray-700 rounded-lg hover:bg-gray-100">Blocked Users</a>
-    <a href="/admin/users?active=true"
-      class="link ml-2 px-2 py-2 text-gray-700  rounded-lg hover:bg-gray-100">Active Users</a>
-     
-      <div id="userList"></div>
+    <a href="/admin/users" class="link ml-2 px-2 py-2 text-gray-700  rounded-lg hover:bg-gray-100">All Users</a>
+    <a href="/admin/users?blocked=true" class="link ml-2 px-2 py-2 text-gray-700 rounded-lg hover:bg-gray-100">Blocked
+      Users</a>
+    <a href="/admin/users?active=true" class="link ml-2 px-2 py-2 text-gray-700  rounded-lg hover:bg-gray-100">Active
+      Users</a>
+
+    <div id="userList"></div>
     <!-- <button type="button"
       class="ml-4 flex items-center gap-3 px-5 py-2.5 text-sm font-medium text-white bg-yellow-600 rounded-lg hover:bg-yellow-300 focus:ring-4 focus:outline-none focus:ring-yellow-300">
       <i class="fa-solid fa-filter"></i>
@@ -245,17 +244,17 @@
   });
 
 
-  document.querySelectorAll('.link').forEach(link=>{
-    link.addEventListener('click',async function(e) {
+  document.querySelectorAll('.link').forEach(link => {
+    link.addEventListener('click', async function (e) {
       e.preventDefault()
-      const url=this.getAttribute('href')
+      const url = this.getAttribute('href')
 
       try {
-        const res = await fetch(url,{method:'GET'})
+        const res = await fetch(url, { method: 'GET' })
         const html = await res.text()
-        document.querySelector('tbody').innerHTML=new DOMParser().parseFromString(html,'text/html').querySelector('tbody').innerHTML
+        document.querySelector('tbody').innerHTML = new DOMParser().parseFromString(html, 'text/html').querySelector('tbody').innerHTML
       } catch (error) {
-         console.error("Error fetching users:", err);
+        console.error("Error fetching users:", err);
       }
     })
   })
