--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
+<link rel="stylesheet" href="/styles/auth.css" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login Page</title>
-  <link rel="stylesheet" href="/styles/auth.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
 
-<body>
-  <div class="main-container">
-    <div class="auth-container">
+<main class='flex justify-center w-full'> 
+    <div class="auth-container max-w-[1/2]">
       <% if(typeof msg !=='undefined' ) { %>
         <div class="success-message">
           <%=msg%>
         </div>
         <% } %>
-          <h1 class="auth-title">Log in to Exclusive</h1>
-          <p class="auth-subtitle">Enter your details below</p>
+          <h1 class="auth-title text-center">Log in to Exclusive</h1>
+          <p class="auth-subtitle text-center">Enter your details below</p>
 
           <form id="loginform" action="/login" method="POST" class="auth-form">
             <% if(typeof error !=='undefined' ) { %>
@@ -33,11 +22,11 @@
                 <div id="error1" class="error-message"></div>
                 <div class="password-container">
 
-                   <input type="password" id="password" class="input-field" name="password" placeholder="Password" />
-                    <i class="fa-solid fa-eye toggle-password" onclick="togglePassword('password', this)"></i>
+                  <input type="password" id="password" class="input-field" name="password" placeholder="Password" />
+                  <i class="fa-solid fa-eye toggle-password" onclick="togglePassword('password', this)"></i>
 
                 </div>
-               
+
 
                 <div id="error2" class="error-message"></div>
                 <div class="auth-actions">
@@ -47,69 +36,70 @@
           </form>
 
           <a href="/auth/google"><button class="google-btn">
-            <img src="/img/google.png" alt="Google" class="google-icon" />
-            Log in with Google
-          </button></a>
+              <img src="/img/google.png" alt="Google" class="google-icon" />
+              Log in with Google
+            </button></a>
 
           <div class="auth-bottom">
             <p class="bottom-text">Don’t have an account?</p>
             <a href="/signup" class="link-btn">Sign up</a>
           </div>
     </div>
-  </div>
-  <script>
-    const email = document.getElementById('email')
-    const password = document.getElementById('password')
+</main>
 
-    const error1 = document.getElementById('error1')
-    const error2 = document.getElementById('error2')
-    const loginform = document.getElementById('loginform')
+<script>
+  const email = document.getElementById('email')
+  const password = document.getElementById('password')
+
+  const error1 = document.getElementById('error1')
+  const error2 = document.getElementById('error2')
+  const loginform = document.getElementById('loginform')
 
 
-    function emailValidateChecking() {
-      const emailval = email.value
-      const emailpattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/
+  function emailValidateChecking() {
+    const emailval = email.value
+    const emailpattern = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/
 
-      if (!emailpattern.test(emailval)) {
-        error1.style.display = 'block'
-        error1.innerHTML = 'Invalid Format'
-      } else {
-        error2.style.display = 'none'
-        error2.innerHTML = ""
-      }
+    if (!emailpattern.test(emailval)) {
+      error1.style.display = 'block'
+      error1.innerHTML = 'Invalid Format'
+    } else {
+      error2.style.display = 'none'
+      error2.innerHTML = ""
     }
-    function passwordValidateChecking() {
-      const passval = password.value
-      const alpha = /[A-Za-z]/
-      const digit = /\d/
+  }
+  function passwordValidateChecking() {
+    const passval = password.value
+    const alpha = /[A-Za-z]/
+    const digit = /\d/
 
-      if (passval.length < 8) {
-        error2.style.display = 'block'
-        error2.innerHTML = "Should contain at least 8 characters"
-      }
-      else if (!alpha.test(passval) || !digit.test(passval)) {
-        error2.style.display = 'block'
-        error2.innerHTML = "Should contain numbers and alphabets"
-      } else {
-        error2.style.display = 'none'
-        error2.innerHTML = ""
-      }
+    if (passval.length < 8) {
+      error2.style.display = 'block'
+      error2.innerHTML = "Should contain at least 8 characters"
     }
-    document.addEventListener('DOMContentLoaded', () => {
-      loginform.addEventListener('submit', function (e) {
-        emailValidateChecking()
-        passwordValidateChecking()
+    else if (!alpha.test(passval) || !digit.test(passval)) {
+      error2.style.display = 'block'
+      error2.innerHTML = "Should contain numbers and alphabets"
+    } else {
+      error2.style.display = 'none'
+      error2.innerHTML = ""
+    }
+  }
+  document.addEventListener('DOMContentLoaded', () => {
+    loginform.addEventListener('submit', function (e) {
+      emailValidateChecking()
+      passwordValidateChecking()
 
-        if (
-          error1.innerHTML ||
-          error2.innerHTML
-        ) {
-          e.preventDefault()
-        }
-      })
+      if (
+        error1.innerHTML ||
+        error2.innerHTML
+      ) {
+        e.preventDefault()
+      }
     })
+  })
 
-      function togglePassword(id, el) {
+  function togglePassword(id, el) {
     const input = document.getElementById(id);
     if (input.type === "password") {
       input.type = "text";
@@ -122,7 +112,4 @@
     }
   }
 
-  </script>
-</body>
-
-</html>
+</script>
