--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Create Account</title>
   <link rel="stylesheet" href="/styles/auth.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
-  <div class="main-container">
+  <link href="/styles/output.css" rel="stylesheet">
+  <main class="flex justify-center w-full ">
     <div class="auth-container">
-      <h1 class="auth-title">Create an account</h1>
-      <p class="auth-subtitle">Enter your details below</p>
+        <div class="flex justify-center">
+          <img class="w-44 object-cover" src="/img/Remove background project.png" alt="">
+        </div>
+      <h1 class="auth-title text-center">Create an account</h1>
+      <p class="auth-subtitle text-center">Enter your details below</p>
 
       <form id="signform" action="/signup" method="POST" class="auth-form">
         <% if(typeof error !=='undefined' ) { %>
@@ -52,7 +44,8 @@
         <a href="/login" class="link-btn">Log in</a>
       </div>
     </div>
-  </div>
+  </main>
+  
 </body>
 <script>
   const nameid = document.getElementById('name')
@@ -155,4 +148,3 @@
 
 
 </script>
-</html>
