user cart page completed

--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -85,34 +85,17 @@
                 class="px-6 py-3 border-gray-50 rounded-xl w-40 bg-white text-gray-900 hover:bg-gray-100 shadow-md">Add
                 to
                 Cart</button>
+               
         </form>
         <button
-          class="px-6 py-3 border-gray-50 rounded-xl w-40 bg-yellow-400 text-gray-900 hover:bg-gray-100 shadow-md">Buy
-          Now</button>
+          class="px-6 py-2 border-gray-50 rounded-xl w-40 h-12 mt-12.5 bg-yellow-500 text-white hover:bg-yellow-600 shadow-md text-base leading-none">
+          Buy Now
+        </button>
+
+        
       </div>
 
-      <!-- Quantity -->
-      <!-- <div class="flex items-center gap-3 mb-8 ">
-        <label class="font-medium">Quantity:</label>
-
-        <div class="flex items-center overflow-hidden border border-gray-200 rounded-lg">
-          <!-- Minus Button -->
-      <!-- <button type="button" id="decrease"
-            class="px-1.5 py-1 bg-white rounded-l-lg   hover:bg-gray-200 text-gray-500 font-bold">
-            −
-          </button> --> -->
-
-      <!-- Input Box -->
-      <!-- <input type="number" id="quantity" name="qty" value="1" min="1" max="5"
-            class="w-9  py-1 border-0  text-center outline-none hide-arrows" />
-
-          Plus Button -->
-      <!-- <button type="button" id="increase"
-            class="px-1.5 py-1 rounded-r-lg   bg-white hover:bg-gray-200 text-yellow-500 font-bold">
-            +
-          </button>
-        </div>
-      </div> -->
+    
 
 
 
