--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -6,8 +6,8 @@
 
         <% if (!cart || cart.items.length===0) { %>
             <div class="text-center py-10">
-                <img src="/images/empty-cart.png" class="mx-auto w-40 mb-4" alt="Empty Cart">
-                <p class="text-lg font-medium mb-4">Your cart is empty</p>
+                <img src="/img/cart-is-empty.png" class="mx-auto w-60 mb-4" alt="Empty Cart">
+               
                 <a href="/products"
                     class="inline-block px-6 py-2 bg-yellow-400 text-black rounded hover:bg-yellow-500 transition">
                     Go to Shop
@@ -17,7 +17,7 @@
                 <% cart.items.forEach(item=> { %>
                     <div class="flex items-center justify-between bg-gray-50 p-4 rounded-lg shadow-sm">
                         <div class="flex items-center gap-4">
-                            <img src="<%= item.productId.images[0] %>" alt="<%= item.productId.name %>"
+                            <img src="/uploads/<%= item.productId.images[0] %>" alt="<%= item.productId.name %>"
                                 class="w-16 h-16 rounded">
                             <div>
                                 <p class="font-medium">
