--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -95,10 +95,15 @@
                                 <span>₹<%= total %></span>
                             </div>
 
-                            <button
-                                class="w-full bg-yellow-400 text-black py-2 rounded hover:bg-yellow-500 transition-colors">
-                                Checkout
-                            </button>
+                            <div class="flex justify-center">
+                                <a href="/address"
+                                    class="w-full max-w-xs text-center bg-yellow-400 text-black py-2 rounded hover:bg-yellow-500 transition-colors">
+                                    Checkout
+                                </a>
+                            </div>
+                           
+                              
+                            
                             <% } %>
     </div>
 
