--- a/views/user/address.ejs
+++ b/views/user/address.ejs
@@ -108,7 +108,7 @@
 
   <!-- Navigation Buttons -->
   <div class="flex justify-between mt-8">
-    <button class="px-6 py-2 border border-gray-400 rounded-lg hover:bg-gray-100">Back</button>
+    <a href="/cart" class="px-6 py-2 border border-gray-400 rounded-lg hover:bg-gray-100">Back</a>
     <button class="px-6 py-2 bg-yellow-500 text-white rounded-lg hover:bg-yellow-600">Next</button>
   </div>
 
