--- a/views/user/forgotpassword.ejs
+++ b/views/user/forgotpassword.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Forgot Password</title>
-  <link rel="stylesheet" href="/styles/auth.css" />
-</head>
-
-<body>
-  <div class="main-container">
-    <div class="forgotpassword-container">
+<link rel="stylesheet" href="/styles/auth.css" />
+  <div class="min-h-screen flex items-center justify-center bg-white">
+    <div class="auth-container w-full max-w-md bg-white p-6 rounded-lg shadow-md">
       <img src="/img/arrow_back_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="back-arrow" class="back-arrow" />
       <h1 class="forgotpassword-title">Forgot Password</h1>
       <p class="forgotpassword-subtitle">Enter your email to reset your password</p>
@@ -33,6 +23,3 @@
       </div>
     </div>
   </div>
-</body>
-
-</html>
