--- a/views/user/otp.ejs
+++ b/views/user/otp.ejs
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>otp Page</title>
     <link rel="stylesheet" href="/styles/auth.css" />
-</head>
 
-<body>
-    <div class="main-container">
+    <div class="min-h-screen flex items-center justify-center bg-white">
 
 
 
-        <div class="auth-container">
+        <div class="auth-container w-full max-w-md bg-white p-6 rounded-lg shadow-md">
             <img src="/img/arrow_back_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" alt="back-arrow" class="back-arrow" />
             <h1 class="otp-title">Verify With Your Email</h1>
             <p class="otp-subtitle">
@@ -82,6 +74,3 @@
 
 
     </script>
-</body>
-
-</html>
