--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Reset Password</title>
-  <link rel="stylesheet" href="/styles/auth.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
-    integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
-  <div class="main-container">
-    <div class="auth-container">
+<link rel="stylesheet" href="/styles/auth.css" />
+  <div class="min-h-screen flex items-center justify-center bg-white">
+    <div class="auth-container w-full max-w-md bg-white p-6 rounded-lg shadow-md">
 
       <h1 class="auth-title">Reset Password</h1>
       <p class="auth-subtitle">Enter the OTP and your new password</p>
@@ -146,6 +133,3 @@
   </script>
 
 
-</body>
-
-</html>
